# tqf

./: .gitignore  README  README.md  colormaps-reference.ipynb  funding.json  hvplot-explorer-reference.ipynb  hvplot-line-segments-reference.ipynb  pyproject.toml  qf-research.ipynb  refactoring_guide.md  requirements.txt  tabulator-add-remove-row-reference.ipynb  tabulator-panel-reference.ipynb  tegr1-a-initial-results.ipynb  tegr1-a.ipynb  tegr1-b-interactive-data.ipynb  tegr1-b.ipynb  tegr1-c-feedback-from-jeff.ipynb  tegr1-c.ipynb  tegr1-d.ipynb  tegr1.ipynb  ygg-a.ipynb  ygg-b.ipynb  ygg-main-a.ipynb  ygg-main-b-sigmoids.ipynb  ygg-references.ipynb  ygg-what-i-learned-a.ipynb  ygg-what-i-learned-b.ipynb  ygg-what-i-learned-c.ipynb  ygg-what-i-learned-d.ipynb  ygg-what-i-learned.ipynb  ygg.ipynb
app/: __main__.py  app.py
app/fdfpg/: __init__.py  app.py  ygg-sidequest-generators.py  ygg-what-i-learned-c.py  ygg-what-i-learned-d.py  ygg_what_i_learned_c.py  ygg_what_i_learned_d.py
input/: 2023-03-31_Snaptshot_TEAcademyNFTs_any.rtf  tea_holders_tea.xlsx
output/: TEGR1.csv
research/: auto_crud_param.py  categorical_step.py  cross_selector_example.py  crud_widget.py  example.html  main.ipynb  network_color_example.py  param_allow_refs.py  param_method_tabs.py  tabulator_css_example.py  tabulator_output_check.py  tabulator_table_example.py  tegr1-a-initial-results.ipynb  tegr1-b-interactive-data.ipynb  tegr1-c-feedback-from-jeff.ipynb  vectorized-qf-performance-experimentation.ipynb  watch_list_items.ipynb  ygg-main-a.ipynb  ygg-main-b-sigmoids.ipynb  ygg-what-i-learned-d.ipynb
test/: test_tegr.py
tqf/: __main__.py  app.py  dataset.py  donations_dashboard.py  outcomes.py  quadratic_funding.py
(+76 files in other folders)
