[tool.poetry]
name = "alloha"
version = "0.1.0"
description = "Alloha is a TEC SME Signal Boosting Process for Quadradic Funding of TE Public Goods. It is a python tooling kit with dune analytics reference data for data science techniques in the domain of Token Engineering, specifically applied to TEC. Developed in collaboration with the TEC Coordination team."
authors = ["linuxiscool.eth, 0xr3x, TEC Coordination"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
jupyterlab = "3.6.3"
pandas = "^2.0.3"
hvplot = "^0.8.4"
panel = "^1.2.1"
param = "^1.13.0"
openpyxl = "^3.1.2"
jupyterlab-unfold = "^0.2.2"
langchain = "^0.0.249"
openai = "^0.27.8"
tabulate = "^0.9.0"
icecream = "^2.1.3"
scipy = "^1.11.1"
pyparsing = "^3.1.1"
nbdev = "^2.3.12"
ipython = "^8.15.0"
networkx = "^3.1"
xarray = "^2023.8.0"
datashader = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
